make sure text in issue lists does not press up against edge of screen on mobiles

--- a/web/cobrands/fixmystreet/_base.scss
+++ b/web/cobrands/fixmystreet/_base.scss
@@ -895,11 +895,14 @@ a:hover.button-left {
           height:auto;
         }
         h4 {
+          padding-right: 1em;
           padding-top: 0.25em;
           margin:0;
         }
         small {
           color:#666;
+          display: block;
+          padding-right: 1em;
           padding-bottom: 0.25em;
         }
       }
@@ -928,9 +931,6 @@ a:hover.button-left {
       overflow:hidden;
       .text {
         float:left;
-        small {
-            display: block;
-        }
       }
     }
   }
